--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+h<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -1581,11 +1581,11 @@
             </a>
             
             <ul class="nav-links">
-                <li><a href="#">Patients</a></li>
-                <li><a href="#">Clinicians</a></li>
-                <li><a href="#">Health Systems</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Resources</a></li>
+                <li><a href="patients.html">Patients</a></li>
+                <li><a href="clinicians.html">Clinicians</a></li>
+                <li><a href="health-systems.html">Health Systems</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="news.html">Resources</a></li>
             </ul>
             
             <a href="#" class="nav-cta">
