--- a/index.html
+++ b/index.html
@@ -1571,6 +1571,17 @@ h<!DOCTYPE html>
         transform: none !important;
         animation: none !important;
     }
+    /* FIX: Nurses section floating cards - more space on mobile */
+.about-visual {
+    min-height: 450px !important;
+    position: relative !important;
+    margin-top: 30px !important;
+    margin-bottom: 30px !important;
+}
+
+.about-visual > * {
+    transform: scale(0.85) !important;
+    }
 }
     </style>
 </head>
