--- a/index.html
+++ b/index.html
@@ -1522,7 +1522,9 @@ h<!DOCTYPE html>
             .nav-links {
                 display: none;
             }
-
+            .nav-cta {
+                display: none !important;
+            }
             .hero-title {
                 font-size: 2.25rem;
             }
