--- a/patients.html
+++ b/patients.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=Outfit:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="header.css">
     <style>
         :root {
             --bg-darkest: #070B12;
@@ -86,102 +87,6 @@
         @keyframes glowPulse {
             0%, 100% { opacity: 0.6; transform: scale(1); }
             50% { opacity: 0.8; transform: scale(1.1); }
-        }
-
-        /* Navigation - Same as index */
-        .nav {
-            position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
-            z-index: 1000;
-            padding: 1rem 2rem;
-            background: rgba(7, 11, 18, 0.9);
-            backdrop-filter: blur(20px);
-            border-bottom: 1px solid var(--border);
-        }
-
-        .nav-container {
-            max-width: 1400px;
-            margin: 0 auto;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-            gap: 0.75rem;
-        }
-
-        .logo-mark {
-            width: 44px;
-            height: 44px;
-        }
-
-        .logo-text {
-            font-family: 'Outfit', sans-serif;
-            font-size: 1.375rem;
-            font-weight: 700;
-            color: var(--white);
-        }
-
-        .logo-text span {
-            color: var(--primary);
-        }
-
-        .nav-menu {
-            display: flex;
-            align-items: center;
-            gap: 0.25rem;
-            list-style: none;
-        }
-
-        .nav-link {
-            display: flex;
-            align-items: center;
-            gap: 0.375rem;
-            padding: 0.75rem 1.125rem;
-            color: var(--text-secondary);
-            text-decoration: none;
-            font-size: 0.9375rem;
-            font-weight: 500;
-            border-radius: 10px;
-            transition: all 0.25s ease;
-        }
-
-        .nav-link:hover {
-            color: var(--white);
-            background: rgba(255, 255, 255, 0.05);
-        }
-
-        .nav-cta {
-            display: flex;
-            align-items: center;
-            gap: 0.625rem;
-            background: var(--white);
-            color: var(--bg-darkest);
-            padding: 0.75rem 1.5rem;
-            border-radius: 100px;
-            text-decoration: none;
-            font-weight: 600;
-            font-size: 0.9rem;
-            transition: all 0.3s;
-            margin-left: 1.5rem;
-        }
-
-        .nav-cta:hover {
-            transform: translateY(-2px);
-            box-shadow: 0 8px 30px rgba(255, 255, 255, 0.2);
-        }
-
-        .nav-cta-dot {
-            width: 8px;
-            height: 8px;
-            background: var(--gradient-primary);
-            border-radius: 50%;
         }
 
         /* Page Header */
@@ -667,8 +572,6 @@
         }
 
         @media (max-width: 768px) {
-            .nav-menu, .nav-cta { display: none; }
-            
             .steps-grid {
                 grid-template-columns: 1fr;
             }
@@ -694,24 +597,86 @@
         <div class="bg-glow glow-2"></div>
     </div>
 
+    <!-- Mobile Menu Overlay -->
+    <div class="mobile-menu-overlay" id="mobileMenuOverlay"></div>
+
+    <!-- Mobile Menu Panel -->
+    <div class="mobile-menu" id="mobileMenu">
+        <div class="mobile-menu-header">
+            <a href="index.html" class="mobile-menu-logo">
+                <img src="logo_icon_nav.png" alt="SnapShot Health" class="logo-mark">
+                <div class="logo-text">SnapShot Health</div>
+            </a>
+        </div>
+        
+        <nav class="mobile-menu-nav">
+            <div class="mobile-menu-item">
+                <a href="index.html#how-it-works" class="mobile-menu-link">
+                    <span class="mobile-menu-icon"><svg viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg></span>
+                    How It Works
+                </a>
+            </div>
+            <div class="mobile-menu-item">
+                <a href="clinicians.html" class="mobile-menu-link">
+                    <span class="mobile-menu-icon"><svg viewBox="0 0 24 24"><path d="M22 12h-4l-3 9L9 3l-3 9H2"/></svg></span>
+                    For Doctors
+                </a>
+            </div>
+            <div class="mobile-menu-item">
+                <a href="health-systems.html" class="mobile-menu-link">
+                    <span class="mobile-menu-icon"><svg viewBox="0 0 24 24"><path d="M3 21h18"/><path d="M5 21V7l8-4v18"/><path d="M19 21V11l-6-4"/><path d="M9 9h1"/><path d="M9 13h1"/><path d="M9 17h1"/></svg></span>
+                    For Hospitals
+                </a>
+            </div>
+            <div class="mobile-menu-item">
+                <a href="patients.html" class="mobile-menu-link">
+                    <span class="mobile-menu-icon"><svg viewBox="0 0 24 24"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"/></svg></span>
+                    For Patients
+                </a>
+            </div>
+            <div class="mobile-menu-item">
+                <a href="about.html" class="mobile-menu-link">
+                    <span class="mobile-menu-icon"><svg viewBox="0 0 24 24"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87"/><path d="M16 3.13a4 4 0 0 1 0 7.75"/></svg></span>
+                    About Us
+                </a>
+            </div>
+            <div class="mobile-menu-item">
+                <a href="news.html" class="mobile-menu-link">
+                    <span class="mobile-menu-icon"><svg viewBox="0 0 24 24"><path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-2 2Zm0 0a2 2 0 0 1-2-2v-9c0-1.1.9-2 2-2h2"/><path d="M18 14h-8"/><path d="M15 18h-5"/><path d="M10 6h8v4h-8V6Z"/></svg></span>
+                    News
+                </a>
+            </div>
+        </nav>
+        <div class="mobile-menu-cta">
+            <a href="contact.html" class="btn btn-primary">
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width: 18px; height: 18px;"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
+                Schedule a Demo
+            </a>
+        </div>
+    </div>
+
     <!-- Navigation -->
-    <nav class="nav">
+    <nav>
         <div class="nav-container">
             <a href="index.html" class="logo">
                 <img src="logo_icon_nav.png" alt="SnapShot Health" class="logo-mark">
                 <div class="logo-text">SnapShot Health</div>
             </a>
-
-            <ul class="nav-menu">
-                <li><a href="index.html" class="nav-link">Home</a></li>
-                <li><a href="clinicians.html" class="nav-link">Clinicians</a></li>
-                <li><a href="health-systems.html" class="nav-link">Health Systems</a></li>
-                <li><a href="about.html" class="nav-link">About</a></li>
-                <li><a href="contact.html" class="nav-link">Contact</a></li>
+            <ul class="nav-links">
+                <li><a href="index.html#how-it-works">How It Works</a></li>
+                <li><a href="clinicians.html">For Doctors</a></li>
+                <li><a href="health-systems.html">For Hospitals</a></li>
+                <li><a href="patients.html">For Patients</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="news.html">News</a></li>
             </ul>
-
+            <button class="hamburger" id="hamburgerBtn" aria-label="Toggle mobile menu">
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+                <span class="hamburger-line"></span>
+            </button>
             <a href="contact.html" class="nav-cta">
-                <span class="nav-cta-dot"></span>
+                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
                 Get Started
             </a>
         </div>
@@ -969,5 +934,6 @@
             });
         });
     </script>
+    <script src="header.js"></script>
 </body>
 </html>
