--- a/news.html
+++ b/news.html
@@ -171,7 +171,7 @@
                 <div class="featured-image"><div class="featured-icon">📊</div></div>
                 <div class="featured-content">
                     <div class="featured-tag">Featured</div>
-                    <h2 class="featured-title"><a href="#">2025 State of Remote Patient Monitoring: Trends, Challenges & Opportunities</a></h2>
+                    <h2 class="featured-title"><a href="article-state-of-rpm-2025.html">2025 State of Remote Patient Monitoring: Trends, Challenges & Opportunities</a></h2>
                     <p class="featured-excerpt">Our comprehensive annual report analyzes RPM adoption rates, reimbursement trends, technology innovations, and what healthcare leaders need to know to stay ahead in the rapidly evolving landscape of connected care.</p>
                     <div class="featured-meta">
                         <span><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg> January 15, 2025</span>
