--- a/news.html
+++ b/news.html
@@ -168,7 +168,8 @@
     <section class="featured">
         <div class="section-container">
             <div class="featured-card">
-                <div class="featured-image"><div class="featured-icon">📊</div></div>
+                <div class="featured-image"><iframe src="rpm-report-cards.html" style="width:100%; height:100%; border:none; border-radius:16px; overflow:hidden;"></iframe></div>
+
                 <div class="featured-content">
                     <div class="featured-tag">Featured</div>
                     <h2 class="featured-title"><a href="article-state-of-rpm-2025.html">2025 State of Remote Patient Monitoring: Trends, Challenges & Opportunities</a></h2>
