--- a/index.html
+++ b/index.html
@@ -2232,7 +2232,7 @@
                 <span class="hamburger-line"></span>
             </button>
             
-            <a href="#" class="nav-cta">
+            <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" class="nav-cta">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="12" cy="12" r="10"/>
                     <path d="M12 6v6l4 2"/>
@@ -2258,7 +2258,7 @@
                 </p>
                 
                 <div class="hero-cta">
-                    <a href="#" class="btn btn-primary">
+                    <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" class="btn btn-primary">
                         Schedule a Demo
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
@@ -2610,7 +2610,7 @@
                     Join hundreds of physicians and thousands of patients who trust SnapShot Health for high-tech, high-touch remote care.
                 </p>
                 <div class="cta-buttons">
-                    <a href="#" class="btn btn-primary">
+                    <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" class="btn btn-primary">
                         Schedule a Demo
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
