--- a/clinicians.html
+++ b/clinicians.html
@@ -802,7 +802,7 @@
                     SnapShot Health is your turnkey partner for Remote Patient Monitoring and Chronic Care Management. We handle everything — devices, patient engagement, clinical documentation, and billing — so you can focus on practicing medicine.
                 </p>
                 <div class="cta-row">
-                    <a href="contact.html" class="btn btn-primary">
+                    <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" class="btn btn-primary">
                         Schedule a Demo
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
@@ -1001,7 +1001,7 @@
                     Join the practices earning new revenue while improving patient outcomes. Zero upfront cost. Results in 60 days.
                 </p>
                 <div class="cta-buttons">
-                    <a href="contact.html" class="btn btn-primary">
+                    <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" class="btn btn-primary">
                         Schedule a Demo
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
