--- a/patients.html
+++ b/patients.html
@@ -648,7 +648,7 @@
             </div>
         </nav>
         <div class="mobile-menu-cta">
-            <a href="contact.html" class="btn btn-primary">
+            <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" class="btn btn-primary">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width: 18px; height: 18px;"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg>
                 Schedule a Demo
             </a>
@@ -675,7 +675,7 @@
                 <span class="hamburger-line"></span>
                 <span class="hamburger-line"></span>
             </button>
-            <a href="contact.html" class="nav-cta">
+            <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" class="nav-cta">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
                 Get Started
             </a>
