--- a/clinicians.html
+++ b/clinicians.html
@@ -778,7 +778,7 @@
                 <span class="hamburger-line"></span>
             </button>
             
-            <a href="contact.html" class="nav-cta">
+            <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" class="nav-cta">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="12" cy="12" r="10"/>
                     <path d="M12 6v6l4 2"/>
