--- a/index.html
+++ b/index.html
@@ -2196,7 +2196,7 @@
         </nav>
 
         <div class="mobile-menu-cta">
-            <a <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary"> class="btn btn-primary">
+          <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width: 18px; height: 18px;">
                     <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
                     <line x1="16" y1="2" x2="16" y2="6"/>
@@ -2232,7 +2232,7 @@
                 <span class="hamburger-line"></span>
             </button>
             
-            <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary"> target="_blank" class="btn btn-primary"> class="nav-cta">
+           <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="nav-cta">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="12" cy="12" r="10"/>
                     <path d="M12 6v6l4 2"/>
@@ -2258,7 +2258,7 @@
                 </p>
                 
                 <div class="hero-cta">
-                    <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary" >class="btn btn-primary"> class="btn btn-primary">
+                   <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary">
                         Schedule a Demo
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
@@ -2610,7 +2610,7 @@
                     Join hundreds of physicians and thousands of patients who trust SnapShot Health for high-tech, high-touch remote care.
                 </p>
                 <div class="cta-buttons">
-                    <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary"> class="btn btn-primary">
+                  <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary">
                         Schedule a Demo
                         <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
