--- a/about.html
+++ b/about.html
@@ -202,7 +202,7 @@
                 <span class="hamburger-line"></span>
                 <span class="hamburger-line"></span>
             </button>
-            <a href="#"
+            <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
                 Get Started
             </a>
