--- a/index.html
+++ b/index.html
@@ -2515,14 +2515,14 @@
             <h2 class="trusted-title">Trusted By Leaders in Healthcare</h2>
             
             <div class="trusted-logos">
-                <div class="trusted-logo">UT Health East Texas</div>
                 <div class="trusted-logo">Signet Heart Group</div>
-                <div class="trusted-logo">Wellnesspointe</div>
-                <div class="trusted-logo">Woodland Heights Medical Center</div>
-                <div class="trusted-logo">Texas Cardiovascular Institute</div>
+                <div class="trusted-logo">Houston Family Physicians</div>
+                <div class="trusted-logo">Cornerstone House Calls</div>
+                <div class="trusted-logo">Texas Primary Care Center</div>
+                <div class="trusted-logo">Centerville Medical Center</div>
                 <div class="trusted-logo">WellMed Network</div>
-                <div class="trusted-logo">Veritas Physicians Group</div>
-                <div class="trusted-logo">Frisco Urgent Care</div>
+                <div class="trusted-logo">Q Day Walk In Clinic</div>
+                <div class="trusted-logo">PVC Clinicians</div>
             </div>
         </div>
     </section>
