--- a/index.html
+++ b/index.html
@@ -2418,7 +2418,7 @@
                 </p>
                 
                 <p class="about-text">
-                    Our AI reviews thousands of readings and flags what matters most — so our care team spends their time on real conversations, not chasing numbers. If something looks off, we call the patient to check in. If it's serious, we let the doctor know right away.
+                    Your personal concierge care team member reviews thousands of readings and flags what matters most — so our care team spends their time on real conversations, not chasing numbers. If something looks off, we call the patient to check in. If it's serious, we let the doctor know right away.
                 </p>
                 
                 <p class="about-text">
