--- a/index.html
+++ b/index.html
@@ -2330,7 +2330,7 @@
                         </div>
                         <div style="display: flex; justify-content: space-between; align-items: center; margin-top: 0.75rem;">
                             <span style="font-size: 0.7rem; color: var(--text-muted);">Just now</span>
-                            <span style="background: var(--secondary); color: white; padding: 0.35rem 0.875rem; border-radius: 100px; font-size: 0.7rem; font-weight: 600;">Reply</span>
+                            <span style="background: var(--secondary); color: white; padding: 0.35rem 0.875rem; border-radius: 100px; font-size: 0.7rem; font-weight: 600;">Calling</span>
                         </div>
                     </div>
                     
