--- a/clinicians.html
+++ b/clinicians.html
@@ -742,7 +742,7 @@
         </nav>
 
         <div class="mobile-menu-cta">
-            <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary">
+            <a href="schedule.html" class="btn btn-primary">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width: 18px; height: 18px;">
                     <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
                     <line x1="16" y1="2" x2="16" y2="6"/>
@@ -778,7 +778,7 @@
                 <span class="hamburger-line"></span>
             </button>
             
-            <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="nav-cta">
+            <a href="schedule.html" class="nav-cta">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                     <circle cx="12" cy="12" r="10"/>
                     <path d="M12 6v6l4 2"/>
@@ -802,7 +802,7 @@
                     SnapShot Health is your turnkey partner for Remote Patient Monitoring and Chronic Care Management. We handle everything — devices, patient engagement, clinical documentation, and billing — so you can focus on practicing medicine.
                 </p>
                 <div class="cta-row">
-                    <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary">
+                    <a href="schedule.html" class="btn btn-primary">
                         Schedule a Demo
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
@@ -1001,7 +1001,7 @@
                     Join the practices earning new revenue while improving patient outcomes. Zero upfront cost. Results in 60 days.
                 </p>
                 <div class="cta-buttons">
-                    <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary">
+                    <a href="schedule.html" class="btn btn-primary">
                         Schedule a Demo
                         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5">
                             <path d="M5 12h14M12 5l7 7-7 7"/>
