--- a/health-systems.html
+++ b/health-systems.html
@@ -1124,7 +1124,7 @@
             <div class="mobile-menu-item"><a href="about.html" class="mobile-menu-link"><span class="mobile-menu-icon"><svg viewBox="0 0 24 24"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/></svg></span>About Us</a></div>
             <div class="mobile-menu-item"><a href="news.html" class="mobile-menu-link"><span class="mobile-menu-icon"><svg viewBox="0 0 24 24"><path d="M4 22h16a2 2 0 0 0 2-2V4a2 2 0 0 0-2-2H8a2 2 0 0 0-2 2v16a2 2 0 0 1-2 2Zm0 0a2 2 0 0 1-2-2v-9c0-1.1.9-2 2-2h2"/></svg></span>News</a></div>
         </nav>
-        <div class="mobile-menu-cta"><a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary">Schedule a Demo</a></div>
+        <div class="mobile-menu-cta"><a href="schedule.html" class="btn btn-primary">Schedule a Demo</a></div>
     </div>
 
     <!-- Navigation -->
@@ -1147,7 +1147,7 @@
                 <span class="hamburger-line"></span>
                 <span class="hamburger-line"></span>
             </button>
-            <a href="https://meetings.hubspot.com/snapshothealth/schedule-a-demo" target="_blank" class="btn btn-primary">
+            <a href="schedule.html" class="btn btn-primary">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
                 Get Started
             </a>
