--- a/schedule.html
+++ b/schedule.html
@@ -310,9 +310,9 @@
             <!-- Calendar Embed -->
             <div class="calendar-card">
                 <!-- Start of Meetings Embed Script -->
-                    <div class="meetings-iframe-container" data-src="https://meetings.hubspot.com/snapshothealth/schedule-a-demo?embed=true"></div>
+                    <div class="meetings-iframe-container" data-src="https://meetings.hubspot.com/snapshot-health?embed=true"></div>
                     <script type="text/javascript" src="https://static.hsappstatic.net/MeetingsEmbed/ex/MeetingsEmbedCode.js"></script>
-                    <!-- End of Meetings Embed Script -->
+                <!-- End of Meetings Embed Script -->
             </div>
         </div>
     </section>
