--- a/clinicians.html
+++ b/clinicians.html
@@ -987,7 +987,7 @@
                     "SnapShot Health transformed our practice. We went from zero RPM patients to over 400 in six months. The revenue is significant, but what really matters is the clinical impact — we're catching problems before they become emergencies. My patients love Angie and the care team."
                 </p>
                 <div class="testimonial-author">Kathy Kirkland, MPH, PA-C</div>
-                <div class="testimonial-role">Oncology Group • Dallas, TX</div>
+                <div class="testimonial-role">Cardiologist Group • Dallas, TX</div>
             </div>
         </div>
     </section>
