--- a/patients.html
+++ b/patients.html
@@ -897,25 +897,26 @@
 
     <!-- Footer -->
     <footer>
-        <div class="footer-container">
-            <a href="index.html" class="footer-logo">
-                <img src="logo_icon_nav.png" alt="SnapShot Health" class="logo-mark" style="height: 32px;">
-                <div class="logo-text" style="font-size: 1.125rem;">SnapShot Health</div>
-            </a>
-            <p class="footer-tagline">Focused Data. Better Health.</p>
-            
-            <div class="footer-links">
-                <a href="index.html">Home</a>
-                <a href="clinicians.html">For Clinicians</a>
-                <a href="about.html">About Us</a>
-                <a href="faq.html">FAQ</a>
-                <a href="contact.html">Contact</a>
-                <a href="privacy.html">Privacy</a>
-            </div>
-            
-            <p class="footer-copyright">© 2025 SnapShot Health. All rights reserved.</p>
+    <div class="footer-container">
+        <a href="index.html" class="footer-logo">
+            <img src="logo_icon_nav.png" alt="SnapShot Health" class="logo-mark" style="height: 32px;">
+            <div class="logo-text" style="font-size: 1.125rem;">SnapShot Health</div>
+        </a>
+        <p class="footer-tagline">Connected Care. Better Outcomes.</p>
+
+        <div class="footer-links">
+            <a href="index.html">Home</a>
+            <a href="patients.html">For Patients</a>
+            <a href="health-systems.html">Health Systems</a>
+            <a href="about.html">About Us</a>
+            <a href="contact.html">Contact</a>
+            <a href="terms.html">Terms</a>
+            <a href="privacy.html">Privacy</a>
         </div>
-    </footer>
+
+        <p class="footer-copyright">© 2026 SnapShot Health. All rights reserved. | <a href="privacy.html" style="color: #00D4AA; text-decoration: none;">HIPAA Compliant</a></p>
+    </div>
+</footer>
 
     <script>
         // FAQ Accordion
