--- a/index.html
+++ b/index.html
@@ -2672,6 +2672,14 @@
                     <li><a href="#">Support</a></li>
                 </ul>
             </div>
+            <div>
+            <h4 class="footer-title">Legal</h4>
+            <ul class="footer-links">
+                <li><a href="terms.html">Terms of Use</a></li>
+                <li><a href="privacy.html">Privacy Policy</a></li>
+                <li><a href="provider-terms.html">Provider Agreement</a></li>
+            </ul>
+        </div>
         </div>
         
         <div class="footer-bottom">
