--- a/index.html
+++ b/index.html
@@ -2637,7 +2637,7 @@
                     <img src="logo_icon_nav.png" alt="SnapShot Health" class="logo-mark">
                     <div class="logo-text">SnapShot Health</div>
                 </a>
-                <p class="footer-tagline">Focused Data. Better Health.</p>
+                <p class="footer-tagline">Connected Care. Better Outcomes.</p>
                 <p class="footer-text">
                     Empowering physicians with high-tech, high-touch remote patient monitoring and chronic care management solutions.
                 </p>
