--- a/index.html
+++ b/index.html
@@ -2683,7 +2683,7 @@
         </div>
         
         <div class="footer-bottom">
-            <p>© 2025 SnapShot Health. All rights reserved. | <span>HIPAA Compliant</span></p>
+            <p>© 2026 SnapShot Health. All rights reserved. | <a href="privacy.html" style="color: #00D4AA; text-decoration: none;">HIPAA Compliant</a></p>
         </div>
     </footer>
 
