--- a/patients.html
+++ b/patients.html
@@ -675,9 +675,12 @@
                 <span class="hamburger-line"></span>
                 <span class="hamburger-line"></span>
             </button>
-            <a href="schedule.html" class="nav-cta">
+           <a href="schedule.html" class="nav-cta">
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><circle cx="12" cy="12" r="10"/><path d="M12 6v6l4 2"/></svg>
                 Get Started
+            </a>
+            <a href="https://portal.snapshothealth.io" class="nav-cta nav-cta-outline">
+                Patient Login
             </a>
         </div>
     </nav>
