--- a/index.html
+++ b/index.html
@@ -2196,7 +2196,9 @@
         </nav>
 
         <div class="mobile-menu-cta">
-          <a href="schedule.html" class="btn btn-primary">
+            <a href="schedule.html" class="btn btn-primary">Schedule a Demo</a>
+            <a href="https://portal.snapshothealth.io" class="mobile-menu-cta-outline">Patient Login</a>
+        </div>
                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" style="width: 18px; height: 18px;">
                     <rect x="3" y="4" width="18" height="18" rx="2" ry="2"/>
                     <line x1="16" y1="2" x2="16" y2="6"/>
