--- a/index.html
+++ b/index.html
@@ -2193,6 +2193,19 @@
                     News
                 </a>
             </div>
+            <!-- Patient Login -->
+            <div class="mobile-menu-item">
+                <a href="https://portal.snapshothealth.io" class="mobile-menu-link">
+                    <span class="mobile-menu-icon">
+                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/>
+                            <polyline points="10 17 15 12 10 7"/>
+                            <line x1="15" y1="12" x2="3" y2="12"/>
+                        </svg>
+                    </span>
+                    Patient Login
+                </a>
+            </div>
         </nav>
 
         <div class="mobile-menu-cta">
